GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Document__c/Service_Request_Document__c.object-meta.xml
<CustomObject>
    <label>Service  Request Document</label>
    <nameField>
        <displayFormat>SRD-{000000}</displayFormat>
        <label>Service  Request Documents Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service  Request Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>