GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Document__c/fields/Account_Product_Service__c.field-meta.xml
<CustomField>
    <fullName>Account_Product_Service__c</fullName>
    <formula>Service_Request_Line_Item__r.Service_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Product Service</label>
    <type>Text</type>
</CustomField>