GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Document__c/fields/case360DocumentId__c.field-meta.xml
<CustomField>
    <fullName>case360DocumentId__c</fullName>
    <label>Case 360 Document Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>