GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Document__c/fields/Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Name__c</fullName>
    <label>Document Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>