GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Document__c/fields/Intake_Request__c.field-meta.xml
<CustomField>
    <fullName>Intake_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Service Request Documents</relationshipLabel>
    <relationshipName>Service_Request_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>