GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Document__c/fields/Is_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Is_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reviewed</label>
    <type>Checkbox</type>
</CustomField>