GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Document__c/fields/Received_Documents_Azure_Location__c.field-meta.xml
<CustomField>
    <fullName>Received_Documents_Azure_Location__c</fullName>
    <label>Received Documents Azure Location</label>
    <type>Url</type>
</CustomField>