GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Document__c/fields/Received_Documents_Azure_Location_Link__c.field-meta.xml
<CustomField>
    <fullName>Received_Documents_Azure_Location_Link__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/cmp/c__LinkToAzureAttachmentWithSASToken?c__recid=&apos;+Id, &apos;Click to Download&apos;,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received Documents Azure Location Link</label>
    <type>Text</type>
</CustomField>