GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Document__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipName>Service_Request_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>