GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Document__c/fields/Service_Request_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request Line Item</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Service_Request_Line_Item__c.Reason_Code__c</field>
            <operation>notEqual</operation>
            <value>Cancel</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service_Request_Line_Item__c</referenceTo>
    <relationshipLabel>Service Request Documents</relationshipLabel>
    <relationshipName>Service_Request_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>