GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document_Name__c</columns>
    <columns>Intake_Request__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>