GloablServices/keshavglobal/force-app/main/default/objects/Service_Request_Document__c/listViews/Unmatched_Received_Documents_Service_Request_Document.listView-meta.xml
<ListView>
    <fullName>Unmatched_Received_Documents_Service_Request_Document</fullName>
    <filterScope>Queue</filterScope>
    <label>Unmatched Received Documents</label>
    <queue>Unmatched_Received_Documents</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>